:adhesive_bandage: Fixed dark mode CSS bugs.

--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,7 @@ textarea:focus{
 
 .search-icon{
   opacity: .75;
+  margin-right: 5px;
 }
 
 .search-input{
